docs/_sass/_banners.scss
.banner {
  background-image: url("../img/bg-banner.png");
  background-repeat: no-repeat;
  background-size: cover;
  height: auto;
  color: white;
  padding-bottom: 15px;

  h2 {
    white-space: nowrap;
  }
  @media (max-width: 959px) and (min-width: 600px) {
    .flex-offset-sm-20 {
      margin-right: 20%;
    }
  }

  .banner-link {
    margin-top: 30px;
    color: yellow;
    text-decoration: none;
  }

  .downloads {
    border-spacing: 10px 5px;
    margin-right: -10px;

    td {
      background-color: rgba(255, 192, 0, 0.4);
      padding: 0px 5px;
      &:last-child {
        width: 100%;
      }
    }
    a {
      color: white;
      text-decoration: none;
    }
  }

  .download-titles {
    border-spacing: 10px 5px;
    margin-left: -10px;
  }
}

.customers {
  background-color: whitesmoke;
  color: black;
  padding: 15px 0px 15px 0px;
}

